test/fe.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: internal-tools
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-prod
          image: 3a59n5l3my/frontend:1.0.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health-check
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 2
          env:
            - name: BACKEND_PATH
              value: "be_app"
          resources:
            requests:
              memory: "512Mi"
              cpu: "1"
            limits:
              memory: "1Gi"
              cpu: "2"
          ports:
            - containerPort: 8080
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: internal-tools
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
