test/fe_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: internal-tools.company.com
spec:
  rules:
  - host: blog.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
  ingressClassName: nginx
